Change Log
==============
2015/03/24 (IBM_DB adapter 2.5.25, driver 2.5.25)
  - Support for Rails 4.2.x
  - Support for Ruby  2.2.x

2014/08/03 (IBM_DB adapter 2.5.18, driver 2.5.14) :
  - Support for Rails 4.1.x
  - Enhanced installation to pull IBM Data Server Driver automatically if not present

2014/03/03 (IBM_DB adapter 2.5.17, driver 2.5.14) :
  - Shipping binaries compatible with Ruby 2.0 for linux x86_64 systems (#29871)
  - Fixed #29869
  - Support microsecond timestamp.

2014/02/26 (IBM_DB adapter 2.5.16, driver 2.5.14) :
  - Yanked version 2.5.15. Hence using new version number

2014/02/17 (IBM_DB adapter 2.5.15, driver 2.5.14) :
  - Yanked version 2.5.14. Hence using new version number

2014/02/11 (IBM_DB adapter 2.5.14, driver 2.5.14) :
  - Support for Rails 4
  - Support for ruby-2.0
  
2014/01/28 (IBM_DB adapter 2.5.12, driver 2.5.11) :
  - Supporting usage of name ibmdb as adapter along with current name ibm_db to support requirements of cloud environments

2012/12/07 (IBM_DB adapter 2.5.11, driver 2.5.11) :
  - Fixed bug #29633 - Deletes cause too many handles to be consumed and not freed
  - Support for Mac OS CLI library loading to check create and drop db functionality - #29625
  - Fixed #29657 - @servertype of IBM_DBAdapter could end up being nil on DB2 for Z/OS version 9
  
2012/05/01 (IBM_DB adapter 2.5.10, driver 2.5.10) :
  - Support for Rails-3.2
  - Changes in installation process. Now user should set only one environment variable IBM_DB_HOME to DB2/IBM_Data_Server_Driver installation directory
  - Fixed bug #29541 - Serialize data when corresponding field maps to CLOB type on Database
  - Fixed bug #29561 - Fixed data truncation error when client and server codepages are different
  - Updated IBM_DB specifics of AR test suite as per Rails-3.2.3
  
2012/01/03 (IBM_DB adapter 2.5.9, driver 2.5.9) :
  - Support for Create and Drop database on DB2 LUW with DB2 client version V97fp4 and above