@@ -1,4 +1,4 @@
-Copyright (c) 2006, 2007, 2008, 2009, 2010 IBM Corporation
+Copyright (c) 2006 - 2015 IBM Corporation
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the "Software"),
