@@ -1,5 +1,5 @@
 =====================================================================
-README for the IBM_DB Adapter (2.5.25) and Driver (2.5.25) (2015/03/24)
+README for the IBM_DB Adapter (2.5.26) and Driver (2.5.26) (2015/04/08)
 For ActiveRecord Version >= 1.15.5 (and Rails >= 1.2.5)
 =====================================================================
 
