@@ -1,0 +1,19 @@
+if (RUBY_PLATFORM =~ /mswin32/ || RUBY_PLATFORM =~ /mingw32/ )
+  require 'mswin32/ibm_db'
+else
+  if (RUBY_VERSION =~ /1.9./ )
+    require 'linux/rb19x/ibm_db.bundle'
+  elsif (RUBY_VERSION =~ /2.0./ )
+    require 'linux/rb20x/ibm_db.bundle'
+  elsif (RUBY_VERSION =~ /2.1./ )
+    require 'linux/rb21x/ibm_db.bundle'
+  elsif (RUBY_VERSION =~ /2.2./ )
+    puts "The ibm_db gem does not support ruby 2.2.x on Mac OS. Please watch out https://github.com/ibmdb/ruby-ibmdb/issues/24 for updates"
+  else
+    require 'linux/rb18x/ibm_db.bundle'
+  end
+end
+require 'active_record'
+require 'active_record/connection_adapters/ibm_db_adapter'
+
+
